fix veritical spacing between

--- a/src/bootstrap-multiEmail.css
+++ b/src/bootstrap-multiEmail.css
@@ -11,6 +11,7 @@
 	border-radius: 3px;
 	color: #363636;
 	padding: 1px 5px;
+	line-height: 27px;
 }
 
 .bootstrap-multiemail .tag.invalid {
